--- a/.gitea/workflows/homelab-deploy.yml
+++ b/.gitea/workflows/homelab-deploy.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - name: Add hosts Entry
         run: |
           echo "192.168.1.5 gitea.nicolldouglas.local" | sudo tee -a /etc/hosts
-        with:
-          token: ${{ secrets.GITEA_TOKEN }}
+
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Docker Login
         uses: docker/login-action@v3
