--- a/.gitea/workflows/homelab-deploy.yml
+++ b/.gitea/workflows/homelab-deploy.yml
@@ -38,6 +38,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up DNS resolution
+        run: |
+          echo "192.168.1.5 gitea.nicolldouglas.local" | sudo tee -a /etc/hosts
+          git config --global http.sslVerify false
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
